✨ Mejoras: Edición/eliminación de transacciones, filtros avanzados, dashboard mejorado y documentación completa

--- a/env.example
+++ b/env.example
@@ -1,6 +1,40 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=your-api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
-NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
+# 🔥 Firebase Configuration
+# Obtén estas credenciales desde: https://console.firebase.google.com/
+# Ve a: Configuración del proyecto > General > Tus apps > Configuración de Firebase
+
+# API Key de tu proyecto Firebase
+NEXT_PUBLIC_FIREBASE_API_KEY=tu_api_key_aqui
+
+# Auth Domain (generalmente: tu-proyecto.firebaseapp.com)
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=tu_auth_domain_aqui
+
+# Project ID de Firebase
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=tu_project_id_aqui
+
+# Storage Bucket (generalmente: tu-proyecto.appspot.com)
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=tu_storage_bucket_aqui
+
+# Messaging Sender ID
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=tu_messaging_sender_id_aqui
+
+# App ID de Firebase
+NEXT_PUBLIC_FIREBASE_APP_ID=tu_app_id_aqui
+
+# ⚙️ INSTRUCCIONES:
+# 1. Copia este archivo y renómbralo como: .env.local
+# 2. Reemplaza los valores "tu_XXX_aqui" con tus credenciales reales de Firebase
+# 3. NO compartas este archivo en repositorios públicos
+# 4. El archivo .env.local está en .gitignore y no se subirá a GitHub
+
+# 📝 EJEMPLO DE VALORES REALES (no uses estos):
+# NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=mi-app.firebaseapp.com
+# NEXT_PUBLIC_FIREBASE_PROJECT_ID=mi-app-12345
+# NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=mi-app.appspot.com
+# NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=123456789012
+# NEXT_PUBLIC_FIREBASE_APP_ID=1:123456789012:web:abcdefghijklmnop
+
+# 🛡️ SEGURIDAD:
+# - Las variables con NEXT_PUBLIC_ son visibles en el cliente
+# - Firebase Authentication y Firestore Rules protegen tu app
+# - Configura las reglas de seguridad en Firebase Console
