fix: PWA manifest paths for GitHub Pages subdirectory

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,9 @@
     "name": "Presupuesto Familiar",
     "short_name": "Presupuesto",
     "description": "Gestión inteligente de finanzas familiares",
-    "start_url": "/",
+    "id": "/App-Presupuesto/",
+    "start_url": "/App-Presupuesto/",
+    "scope": "/App-Presupuesto/",
     "display": "standalone",
     "background_color": "#0f172a",
     "theme_color": "#8b5cf6",
